--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -279,7 +279,7 @@ position: absolute;
     display: block;
     margin-left: 15px;
     right: 5px;
-    width: 450px;
+    width:450px;
 }
 
 .left-art {
@@ -323,6 +323,7 @@ position: absolute;
     height: 5px;
     position: relative;
     top: 10px;
+    right: 50px;
     z-index: 0;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
@@ -1410,7 +1411,7 @@ font-size: 25px;
 /*Media Queries*/
 
 /*Medium Screen*/
-@media screen and (max-width: 1024px) and (min-width: 782px){
+@media screen and (max-width: 1215px) and (min-width: 782px){
 
 
     body{
@@ -1988,7 +1989,7 @@ padding: 25px;
 }
 
 /*Big Screen*/
-@media ( min-width: 1025px ) and (max-width: 1620px) {
+@media ( min-width: 1216px ) and (max-width: 1620px) {
 .small-header {
     display: none;
 }
