Adjusted the font

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -237,9 +237,9 @@ position: absolute;
 .right-art-top a{
     text-decoration: none;
     color: #FFFFFF;
-    font-size: 25px;
+    font-size: 30px;
     position: relative;
-    top: 50px;
+    top: 70px;
     left: 15px;
     line-height: 30px;
     z-index: 0;
@@ -1505,7 +1505,7 @@ font-size: 25px;
     color: #FFFFFF;
     font-size: 30px;
     position: relative;
-    top: 30px;
+    top: 50px;
     left: 10px;
     line-height: 30px;
     z-index: 0;
@@ -1545,6 +1545,7 @@ font-size: 25px;
     display: block;
     margin-left: 15px;
     right: 5px;
+    width: 250px;
 }
 
 .left-art {
@@ -2002,7 +2003,7 @@ padding: 25px;
 }
 
 .right-art-top a {
-    font-size: 30px;
+    font-size: 35px;
  }
 
 }
@@ -2021,7 +2022,7 @@ padding: 25px;
     }
     
     .right-art-top a {
-    font-size: 30px;
+    font-size: 43px;
         }
 
 }
