Aligned items on the page for responsiveness.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1972,8 +1972,9 @@ padding: 25px;
 
 
 
-.right-art-top a {
+#stub-para {
     font-size: 30px;
+    width: 400px;
  }
 
 }
@@ -1991,8 +1992,9 @@ padding: 25px;
         left: 50px;
     }
     
-    .right-art-top a {
+    #stub-para {
     font-size: 30px;
+    width: 400px;
         }
 
 }
