--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1441,7 +1441,7 @@ font-size: 20px;
     .right-art-top a{
         text-decoration: none;
         color: #FFFFFF;
-        font-size: 30px;
+        font-size: 20px;
         position: relative;
         top: 50px;
         left: 10px;
@@ -1475,10 +1475,10 @@ font-size: 20px;
     .right-art-bottom a{
         text-decoration: none;
         color: #FFFFFF;
-        font-size: 25px;
+        font-size: 20px;
         position: relative;
         top: 30px;
-        line-height: 35px;
+        line-height: 25px;
         z-index: 0;
         display: block;
         margin-left: 15px;
@@ -1532,7 +1532,7 @@ font-size: 20px;
     }
 
     .left-art h1{
-        font-size: 35px;
+        font-size: 20px;
         position: relative;
         z-index: 0;
         padding: 20px;
@@ -1597,7 +1597,7 @@ font-size: 20px;
 
     .eight-grids{
         position: relative;
-        margin: 170px 0 210px 0;
+        margin: 170px 0 210px 205px;
     }
 
     .top-img-div {
@@ -1755,6 +1755,7 @@ font-size: 20px;
 
  /*Small Screen*/
 @media screen and ( max-width: 782px ){
+    
     .top-header {
         display: none;
     }
@@ -1771,67 +1772,67 @@ font-size: 20px;
         display: grid;
     }
 
-.div-4-eight {
-    right: 0px;
-    padding-left: 20px;
-    left: 0px
-}
-.cont-main {
-    overflow-x: hidden;
-}
-
-.right-art-top, .right-art-bottom, .left-art {
-    width: 100%;
-    padding: 0px;
-    margin: 5px 0 5px 0;
-    height: 500px;
-    font-size: 40px;
-}
-
-.left-art h1,
-.right-art-top a {
-    font-size: 30px;
-    margin-left: 50px;
-}
-.left-art h4 {
-    margin-left: 70px;
-}
-
-.funding-img-cont {
- margin: 0 10px 0 10px;   
-}
-
-.red-txt, .latest-div1,.latest-div2,
- .latest-div3, .latest-div4,
- .latest-div5,.latest-div6, 
- .latest-div7{
-    color: red;
-    background-color: rgb(252, 213, 210);
-    justify-items: end;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-items: start;
-    height: 120px;
-    width: 360px;
-}
-
-
-.right-art-top a, .right-art-bottom a {
-    padding: 30px;
-    margin-top: 50px;
-    top: 150px;
-    display: block;
-    font-size: 50px;
-    line-height: 50px;
-}
-
-.latest-div4, .latest-div5, 
-.latest-div6, .latest-div7 {
-    grid-template-columns: repeat(2, auto);
-    justify-content: space-between;
-    width: 100%;
-    height: 100px;
+    .div-4-eight {
+        right: 0px;
+        padding-left: 20px;
+        left: 0px
     }
+    .cont-main {
+        overflow-x: hidden;
+    }
+
+    .right-art-top, .right-art-bottom, .left-art {
+        width: 100%;
+        padding: 0px;
+        margin: 5px 0 5px 0;
+        height: 500px;
+        font-size: 40px;
+    }
+
+    .left-art h1,
+    .right-art-top a {
+        font-size: 30px;
+        margin-left: 50px;
+    }
+    .left-art h4 {
+        margin-left: 70px;
+    }
+
+    .funding-img-cont {
+    margin: 0 10px 0 10px;   
+    }
+
+    .red-txt, .latest-div1,.latest-div2,
+    .latest-div3, .latest-div4,
+    .latest-div5,.latest-div6, 
+    .latest-div7{
+        color: red;
+        background-color: rgb(252, 213, 210);
+        justify-items: end;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        justify-items: start;
+        height: 120px;
+        width: 360px;
+    }
+
+
+    .right-art-top a, .right-art-bottom a {
+        padding: 30px;
+        margin-top: 50px;
+        top: 150px;
+        display: block;
+        font-size: 50px;
+        line-height: 50px;
+    }
+
+    .latest-div4, .latest-div5, 
+    .latest-div6, .latest-div7 {
+        grid-template-columns: repeat(2, auto);
+        justify-content: space-between;
+        width: 100%;
+        height: 100px;
+        }
 
     .fas.fa-search.fa-3x, .fas.fa-bars.fa-3x {
         padding: 25px;
@@ -1963,7 +1964,7 @@ font-size: 20px;
     }
 
     .funding-nav ul {
-    bottom: 40px;
+        bottom: 40px;
     }
 
     .funding-list li, #fund-round {
@@ -2035,6 +2036,10 @@ font-size: 20px;
 
     #latest-d {
         margin-left: 40px;
+    }
+
+    .eight-grids{
+        margin: 0;
     }
 }
 
